<resources>
    <!-- Steven Lambrinos n01429063 section A -->
    <string name="app_name">StevenLambrinosN01429063</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
        <string name="icon1">icon</string>
        <string name="button">open</string>
        <string name="button1">password</string>
        <string name="stev_pass">Enter Password</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="name">Steven Lambrinos N01429063</string>
    <string name="question">Do you really want to leave?</string>
    <string name="confirm">Confirm</string>
    <string name="clear_canvas">Clear Canvas</string>
    <string name="stevrb1">Small</string>
    <string name="stevrb2">Medium</string>
    <string name="stevrb3">Large</string>
    <string name="stevrb4">Red</string>
    <string name="stevrb5">Green</string>
    <string name="stevrb6">blue</string>
    <string name="firstname">Steven</string>
    <string name="lastname">Lambrinos</string>
</resources>