<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="steven.lambrinos.n01429063.a3.ui.home.n01429063Fragment"
        android:label="@string/title_home"
        tools:layout="@layout/n01429063tab" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="steven.lambrinos.n01429063.a3.ui.dashboard.LambrinosFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/steventab" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="steven.lambrinos.n01429063.a3.ui.notifications.stevenFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/lambrinostab" />
</navigation>